<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">EpiTime-ng</string>
    <string name="preference_file_key" translatable="false">fr.corenting.epitime_ng.data</string>
    <string name="api_url" translatable="false">http://webservices.chronos.epita.net/GetWeeks.aspx?auth={0}&amp;num={3}&amp;group={1}&amp;week={2}</string>
    <string name="api_key" translatable="false">3piko</string>
    <string name="api_groups" translatable="false">http://webservices.chronos.epita.net/GetWeeks.aspx?auth={0}&amp;getMenu={1}</string>
    <string name="tinydb_favorites" translatable="false">favoritesList</string>


    <string name="group_selection">Choose your group</string>
    <string name="search">Search</string>
    <string name="search_hint">Group name</string>

    <string name="drawer_open">Open the navigation drawer</string>
    <string name="drawer_close">Close the navigation drawer</string>

    <string name="no_internet">Can not connect to Internet</string>
    <string name="loading">Loading…</string>

    <string name="dialog_alert_blacklist_title">Confirmation</string>
    <string name="dialog_alert_blacklist_text">Do you really want to re-establish this course?</string>
    <string name="widget_no_group">No group selected !</string>
    <string name="widget_touch_to_select">Click to select it</string>
    <string name="choose_school">Choose a school</string>
    <string name="blacklist">Blacklist</string>
    <string name="ok">OK</string>
    <string name="details_ignore_class">Blacklist this course</string>
    <string name="details_teacher">&lt;b>Teacher : &lt;/b></string>
    <string name="details_schedule">&lt;b>Schedule : &lt;/b></string>
    <string name="details_group">&lt;b>Group : &lt;/b></string>
    <string name="details_room">&lt;b>"Room : &lt;/b></string>
    <string name="no_blacklisted_class">No course ignored</string>
    <string name="no_internet_msg">Can not connect, please check your connection.</string>
    <string name="chronos_error">Chronos error</string>
    <string name="chronos_incorrect_data">Datas sent by Chronos are incorrect</string>
    <string name="error_getting_list">Error while downloading the list of</string>
    <string name="rooms">rooms.</string>
    <string name="Rooms">Rooms</string>
    <string name="teachers">teachers.</string>
    <string name="students">students groups.</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="favorite_add">Add to favorites</string>
    <string name="Favorites">Favorites</string>
    <string name="previous_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="favorite_deleted">" deleted from the favorites"</string>
    <string name="favorite_added">" added to the favorites"</string>

    <string name="settings">Settings</string>
    <string name="settings_blacklist_summary">Display a notification when the day includes blacklisted courses</string>
    <string name="settings_blacklist_title">Blacklisted courses warning</string>
    <string name="details_rooms">&lt;b>"Rooms : &lt;/b></string>
    <string name="Teachers">Teachers</string>
    <string name="settings_delete_cache_title">Delete the cache</string>
    <string name="settings_delete_cache_summary">This will delete all the cached datas (groups, schedules…)</string>
    <string name="settings_delete_cache_dialog">Are you sure you want to delete the cache?</string>
    <string name="settings_cache_success">Cache deleted successfully</string>
    <string name="settings_cache_fail">Error while deleting the cache</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme">Application theme</string>

    <string name="ok_reboot">OK, restart !</string>
    <string name="settings_reboot_msg">The application will now restart to apply the new theme.</string>
    <string name="settings_widget_theme">Widget theme</string>
    <string name="today">Today</string>
    <string name="list_error">An error occurred</string>
    <string-array name="settings_theme_human_values">
        <item>Blue</item>
        <item>Blue Gray</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Indigo</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>
    <string-array name="settings_theme_phone_values" translatable="false">
        <item>Blue</item>
        <item>BlueGray</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Indigo</item>
        <item>Green</item>
        <item>Purple</item>
    </string-array>
    <string name="list_please_reload">Please reload the list</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="dialog_remove_favorite">Do you want to remove %s from the favorites ?</string>
    <string name="llama">Llama picture</string>
    <string name="i_am_a_llama">I\'m a llama</string>
</resources>
