<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/menu_item_favorite"
        android:icon="@drawable/ic_action_not_important"
        android:title="@string/favorite_add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_previous_week"
        android:icon="@drawable/ic_action_double_previous_item"
        android:title="@string/previous_week"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_item_next_week"
        android:icon="@drawable/ic_action_double_next_item"
        android:title="@string/next_week"
        app:showAsAction="never"/>
<item android:id="@+id/menu_item_blacklist"
    android:icon="@drawable/ic_action_cancel"
    android:title="@string/blacklist"
    app:showAsAction="never"/>
</menu>